--- a/src/GCodeViewer.WPF.Controls.TextEditor/NumericUpDown.xaml
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/NumericUpDown.xaml
@@ -25,8 +25,8 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="25" />
+                <ColumnDefinition Width="4*" />
+                <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
 
             <local:NumericTextbox
