handle font size change without viewmodel

--- a/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
@@ -121,9 +121,10 @@
                 Background="Transparent"
                 BorderBrush="Transparent"
                 Foreground="{StaticResource StatusBarForegroundColor}"
-                MaxValue="30"
+                MaxValue="40"
                 MinValue="1"
-                Value="{Binding FontSize}" />
+                StepSize="2"
+                Value="14" />
 
             <StackPanel
                 HorizontalAlignment="Right"
