--- a/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
+++ b/src/GCodeViewer.WPF.Controls.TextEditor/GCodeTextEditor.xaml
@@ -3,8 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
+    xmlns:ctrl="clr-namespace:GCodeViewer.WPF.Controls;assembly=GCodeViewer.WPF.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:GCodeViewer.WPF.Controls.TextEditor"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -114,7 +114,7 @@
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
             Background="{StaticResource ScrollbarBackgroundColor}">
-            <local:NumericUpDown
+            <ctrl:NumericUpDown
                 x:Name="FontSizeChooser"
                 Width="50"
                 Margin="3"
@@ -135,7 +135,7 @@
                     VerticalContentAlignment="Center"
                     Content="Ln:"
                     Foreground="{StaticResource StatusBarForegroundColor}" />
-                <local:NumericTextbox
+                <ctrl:NumericTextbox
                     Width="Auto"
                     Padding="0,2,0,0"
                     VerticalAlignment="Center"
