--- a/src/GCodeViewer.WPF/MainWindow.xaml
+++ b/src/GCodeViewer.WPF/MainWindow.xaml
@@ -1,12 +1,38 @@
-﻿<Window x:Class="GCodeViewer.WPF.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GCodeViewer.WPF"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+﻿<Window
+    x:Class="GCodeViewer.WPF.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:GCodeViewer.WPF"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:texteditor="clr-namespace:GCodeViewer.WPF.Controls.TextEditor;assembly=GCodeViewer.WPF.Controls.TextEditor"
+    xmlns:viewer3D="clr-namespace:GCodeViewer.WPF.Controls.PointCloud;assembly=GCodeViewer.WPF.Controls.PointCloud"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
+    <Grid Background="DarkGray" DockPanel.Dock="Bottom">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+
+        <viewer3D:Viewer3D
+            x:Name="Viewer3D"
+            Grid.Column="0"
+            Renderables="{Binding PointCloudObjects}" />
+
+        <GridSplitter
+            Grid.Column="1"
+            Width="1"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Stretch"
+            Background="#1e1e1e" />
+
+        <texteditor:GCodeTextEditor
+            x:Name="TextEditor"
+            Grid.Column="2"
+            TextChanged="{Binding HandleTextChanged}" />
     </Grid>
 </Window>
