--- a/src/GCodeViewer.WPF/App.xaml
+++ b/src/GCodeViewer.WPF/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="GCodeViewer.WPF.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GCodeViewer.WPF"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+    x:Class="GCodeViewer.WPF.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:GCodeViewer.WPF"
+    Startup="Application_Startup">
+    <Application.Resources />
 </Application>
