--- a/src/GCodeViewer.WPF/MainWindow.xaml
+++ b/src/GCodeViewer.WPF/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="GCodeViewer.WPF.Pages.MainWindow"
+    x:Class="GCodeViewer.WPF.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,8 +8,8 @@
     xmlns:texteditor="clr-namespace:GCodeViewer.WPF.Controls.TextEditor;assembly=GCodeViewer.WPF.Controls.TextEditor"
     xmlns:viewer3D="clr-namespace:GCodeViewer.WPF.Controls.PointCloud;assembly=GCodeViewer.WPF.Controls.PointCloud"
     Title="MainWindow"
-    Width="800"
-    Height="450"
+    Width="1600"
+    Height="800"
     mc:Ignorable="d">
     <Grid Background="DarkGray" DockPanel.Dock="Bottom">
         <Grid.ColumnDefinitions>
