--- a/src/GCodeViewer.WPF/Pages/SettingsPage.xaml
+++ b/src/GCodeViewer.WPF/Pages/SettingsPage.xaml
@@ -2,16 +2,58 @@
     x:Class="GCodeViewer.WPF.Pages.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ctrl="clr-namespace:GCodeViewer.WPF.Controls;assembly=GCodeViewer.WPF.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:GCodeViewer.WPF.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="SettingsPage"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    Background="White"
     mc:Ignorable="d">
 
-    <StackPanel>
+    <StackPanel VerticalAlignment="Center">
         <Button Command="{Binding GoBack}">Go back</Button>
-        <Label>this is the settings page</Label>
+        <Label HorizontalAlignment="Center">Settings</Label>
+
+        <Label FontWeight="Bold">PrintVolume</Label>
+        <Grid HorizontalAlignment="Center">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Label
+                Grid.Row="0"
+                Grid.Column="0"
+                HorizontalAlignment="Right"
+                Content="Radius:" />
+
+            <ctrl:NumericUpDown
+                Grid.Row="0"
+                Grid.Column="1"
+                Width="100"
+                MinValue="1"
+                Value="{Binding PrintBedRadius}" />
+            <Label Grid.Row="0" Grid.Column="2">mm</Label>
+
+            <Label
+                Grid.Row="1"
+                Grid.Column="0"
+                HorizontalAlignment="Right"
+                Content="Height:" />
+            <ctrl:NumericUpDown
+                Grid.Row="1"
+                Grid.Column="1"
+                Width="100"
+                MinValue="1"
+                Value="{Binding PrintVolumeHeight}" />
+            <Label Grid.Row="1" Grid.Column="2">mm</Label>
+        </Grid>
     </StackPanel>
 </Page>
