--- a/src/GCodeViewer.WPF/Pages/SettingsPage.xaml
+++ b/src/GCodeViewer.WPF/Pages/SettingsPage.xaml
@@ -4,19 +4,17 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ctrl="clr-namespace:GCodeViewer.WPF.Controls;assembly=GCodeViewer.WPF.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:GCodeViewer.WPF.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="SettingsPage"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    Background="White"
     mc:Ignorable="d">
 
     <StackPanel VerticalAlignment="Center">
         <Button Command="{Binding GoBackAndSave}">Go back</Button>
         <Label HorizontalAlignment="Center">Settings</Label>
 
-        <Label FontWeight="Bold">PrintVolume</Label>
+        <Label FontWeight="Bold">Printing Area</Label>
         <Grid HorizontalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
