--- a/src/GCodeViewer.WPF/TextEditor/TextEditorPage.xaml
+++ b/src/GCodeViewer.WPF/TextEditor/TextEditorPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="GCodeViewer.WPF.Pages.TextEditorPage"
+    x:Class="GCodeViewer.WPF.TextEditor.TextEditorPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
