implement some of the texteditor viewmodel

--- a/src/GCodeViewer.WPF/TextEditor/TextEditorPage.xaml
+++ b/src/GCodeViewer.WPF/TextEditor/TextEditorPage.xaml
@@ -11,5 +11,5 @@
     d:DesignWidth="800"
     mc:Ignorable="d">
 
-    <editor:GCodeTextEditor />
+    <editor:GCodeTextEditor x:Name="textEditor" TextChanged="{Binding HandleTextChanged}" />
 </Page>
