--- a/src/GCodeViewer.WPF/MainWindow/MainWindow.xaml
+++ b/src/GCodeViewer.WPF/MainWindow/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="GCodeViewer.WPF.MainWindow"
+    x:Class="GCodeViewer.WPF.MainWindow.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
