--- a/src/GCodeViewer.WPF/StlPositioning/STLPositioningPage.xaml
+++ b/src/GCodeViewer.WPF/StlPositioning/STLPositioningPage.xaml
@@ -2,15 +2,122 @@
     x:Class="GCodeViewer.WPF.StlPositioning.STLPositioningPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ctrl="clr-namespace:GCodeViewer.WPF.Controls;assembly=GCodeViewer.WPF.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:GCodeViewer.WPF.StlPositioning"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="STLPositioningPage"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
 
-    <Grid>
-        <Label>positioning the stl page</Label>
-    </Grid>
+    <StackPanel>
+        <DockPanel HorizontalAlignment="Stretch">
+            <Button HorizontalAlignment="Left" DockPanel.Dock="Left">go back</Button>
+            <Button HorizontalAlignment="Right" DockPanel.Dock="Right">continue</Button>
+        </DockPanel>
+
+        <Label HorizontalAlignment="Stretch">positioning the stl page</Label>
+
+        <DockPanel Margin="30" HorizontalAlignment="Center">
+            <Grid HorizontalAlignment="Center" DockPanel.Dock="Left">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Label
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    HorizontalAlignment="Right"
+                    Content="X:" />
+
+                <ctrl:NumericUpDown
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Width="100" />
+                <Label Grid.Row="0" Grid.Column="2">mm</Label>
+
+                <Label
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    HorizontalAlignment="Right"
+                    Content="Y:" />
+                <ctrl:NumericUpDown
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Width="100" />
+                <Label Grid.Row="1" Grid.Column="2">mm</Label>
+
+                <Label
+                    Grid.Row="2"
+                    Grid.Column="0"
+                    HorizontalAlignment="Right"
+                    Content="Z:" />
+                <ctrl:NumericUpDown
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Width="100" />
+                <Label Grid.Row="2" Grid.Column="2">mm</Label>
+            </Grid>
+
+            <Grid
+                Margin="50,0,0,0"
+                HorizontalAlignment="Center"
+                DockPanel.Dock="Right">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Label
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    HorizontalAlignment="Right"
+                    Content="RotX:" />
+
+                <ctrl:NumericUpDown
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Width="100" />
+                <Label Grid.Row="0" Grid.Column="2">deg</Label>
+
+                <Label
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    HorizontalAlignment="Right"
+                    Content="RotY:" />
+                <ctrl:NumericUpDown
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Width="100" />
+                <Label Grid.Row="1" Grid.Column="2">deg</Label>
+
+                <Label
+                    Grid.Row="2"
+                    Grid.Column="0"
+                    HorizontalAlignment="Right"
+                    Content="Rot Z:" />
+                <ctrl:NumericUpDown
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Width="100" />
+                <Label Grid.Row="2" Grid.Column="2">deg</Label>
+            </Grid>
+        </DockPanel>
+
+        <Button>Center</Button>
+        <Button>Place on printbed</Button>
+    </StackPanel>
 </Page>
