--- a/src/GCodeViewer.WPF/Settings/SettingsPage.xaml
+++ b/src/GCodeViewer.WPF/Settings/SettingsPage.xaml
@@ -25,6 +25,7 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
 
             <Label
@@ -69,6 +70,16 @@
                 MinValue="1"
                 Value="{Binding AAxisOffset}" />
             <Label Grid.Row="2" Grid.Column="2">mm</Label>
+            <Label
+                Grid.Row="2"
+                Grid.Column="3"
+                HorizontalAlignment="Left"
+                VerticalContentAlignment="Center"
+                FontFamily="Bold"
+                FontSize="12"
+                Foreground="Orange">
+                *
+            </Label>
         </Grid>
 
         <Button Margin="0,50,0,0" Command="{Binding SaveAndApplySettings}">Apply</Button>
