--- a/src/GCodeViewer.WPF/StlPositioning/STLPositioningPage.xaml
+++ b/src/GCodeViewer.WPF/StlPositioning/STLPositioningPage.xaml
@@ -41,11 +41,11 @@
                     Grid.Column="0"
                     HorizontalAlignment="Right"
                     Content="X:" />
-
                 <ctrl:NumericUpDown
                     Grid.Row="0"
                     Grid.Column="1"
-                    Width="100" />
+                    Width="100"
+                    Value="{Binding XOffset}" />
                 <Label Grid.Row="0" Grid.Column="2">mm</Label>
 
                 <Label
@@ -56,7 +56,8 @@
                 <ctrl:NumericUpDown
                     Grid.Row="1"
                     Grid.Column="1"
-                    Width="100" />
+                    Width="100"
+                    Value="{Binding YOffset}" />
                 <Label Grid.Row="1" Grid.Column="2">mm</Label>
 
                 <Label
@@ -67,7 +68,8 @@
                 <ctrl:NumericUpDown
                     Grid.Row="2"
                     Grid.Column="1"
-                    Width="100" />
+                    Width="100"
+                    Value="{Binding ZOffset}" />
                 <Label Grid.Row="2" Grid.Column="2">mm</Label>
             </Grid>
 
@@ -91,7 +93,6 @@
                     Grid.Column="0"
                     HorizontalAlignment="Right"
                     Content="RotX:" />
-
                 <ctrl:NumericUpDown
                     Grid.Row="0"
                     Grid.Column="1"
