--- a/src/GCodeViewer.WPF/TextEditor/TextEditorPage.xaml
+++ b/src/GCodeViewer.WPF/TextEditor/TextEditorPage.xaml
@@ -22,22 +22,66 @@
         <KeyBinding Key="F5" Command="{Binding PreviewPrintingPositions}" />
     </Page.InputBindings>
 
-    <DockPanel>
-        <StackPanel
-            Height="25"
-            DockPanel.Dock="Top"
-            Orientation="Horizontal">
-            <Button Command="{Binding OpenFile}">Open</Button>
-            <Button Command="{Binding SaveFile}">Save</Button>
-            <Button Command="{Binding SaveFileAs}">Save As</Button>
-            <Button Command="{Binding CloseFile}">Close</Button>
-            <Button Command="{Binding GoToSettingsPage}">Settings</Button>
-            <Button Command="{Binding PreviewPrintingPositions}">Render Positions</Button>
-        </StackPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="100" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-        <editor:GCodeTextEditor
-            x:Name="textEditor"
-            DockPanel.Dock="Bottom"
-            TextChanged="{Binding HandleTextChanged}" />
-    </DockPanel>
+        <DockPanel
+            Grid.Row="0"
+            Grid.RowSpan="2"
+            Grid.Column="0"
+            Grid.ColumnSpan="3">
+            <StackPanel
+                Height="25"
+                DockPanel.Dock="Top"
+                Orientation="Horizontal">
+                <Menu>
+                    <MenuItem Header="File">
+                        <MenuItem Command="{Binding OpenFile}" Header="Open" />
+                        <MenuItem Command="{Binding SaveFile}" Header="Save" />
+                        <MenuItem Command="{Binding SaveFileAs}" Header="Save As" />
+                        <MenuItem Command="{Binding CloseFile}" Header="Close" />
+                    </MenuItem>
+                </Menu>
+                <Button Command="{Binding GoToSettingsPage}">Settings</Button>
+            </StackPanel>
+
+            <editor:GCodeTextEditor
+                x:Name="textEditor"
+                DockPanel.Dock="Bottom"
+                TextChanged="{Binding HandleTextChanged}" />
+        </DockPanel>
+
+        <Border
+            Grid.Row="1"
+            Grid.Column="2"
+            Width="120"
+            Height="30"
+            Margin="0,0,20,15"
+            Padding="1"
+            Background="DarkSlateGray"
+            BorderThickness="0"
+            CornerRadius="11">
+            <Border Background="CornflowerBlue" CornerRadius="11">
+                <Button
+                    VerticalAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    Background="Transparent"
+                    BorderBrush="Transparent"
+                    Command="{Binding PreviewPrintingPositions}"
+                    FontSize="20"
+                    FontWeight="SemiBold"
+                    Foreground="#1e1e1e">
+                    PREVIEW
+                </Button>
+            </Border>
+        </Border>
+    </Grid>
 </Page>
