--- a/src/GCodeViewer.WPF.Controls.Viewer3D/Viewer3D.xaml
+++ b/src/GCodeViewer.WPF.Controls.Viewer3D/Viewer3D.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="GCodeViewer.WPF.Controls.PointCloud.Viewer3D"
+    x:Class="GCodeViewer.WPF.Controls.Viewer3D.Viewer3D"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
