Make syntaxrules bindable

--- a/src/GCodeViewer.WPF/TextEditor/TextEditorPage.xaml
+++ b/src/GCodeViewer.WPF/TextEditor/TextEditorPage.xaml
@@ -79,6 +79,7 @@
                 x:Name="textEditor"
                 VerticalAlignment="Stretch"
                 DockPanel.Dock="Bottom"
+                SyntaxRules="{Binding SyntaxHighlightingRules}"
                 TextChanged="{Binding HandleTextChanged}" />
         </DockPanel>
 
