--- a/src/GCodeViewer.WPF/TextEditor/TextEditorPage.xaml
+++ b/src/GCodeViewer.WPF/TextEditor/TextEditorPage.xaml
@@ -79,7 +79,7 @@
                 x:Name="textEditor"
                 VerticalAlignment="Stretch"
                 DockPanel.Dock="Bottom"
-                SyntaxRules="{Binding SyntaxHighlightingRules}"
+                SyntaxHighlightingRules="{Binding SyntaxHighlightRules}"
                 TextChanged="{Binding HandleTextChanged}" />
         </DockPanel>
 
